--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.3",
     "mui-datatables": "^3.7.4",
     "react": "^16.14.0",
