--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "apexcharts": "^3.24.0",
     "axios": "^0.27.2",
     "classnames": "^2.2.6",
+    "emailjs-com": "^3.2.0",
     "font-awesome": "^4.7.0",
     "jspdf": "^2.5.1",
     "moment": "^2.29.3",
