--- a/ui/package.json
+++ b/ui/package.json
@@ -26,6 +26,7 @@
     "react-apexcharts": "^1.3.7",
     "react-dom": "^16.14.0",
     "react-google-maps": "^9.4.5",
+    "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
     "react-router-dom": "^5.3.3",
     "react-scripts": "4.0.1",
